--- a/runner/docker-compose.yml
+++ b/runner/docker-compose.yml
@@ -1,40 +1,6 @@
 version: '3.8'
 
 services:
-  runner-app:
-#    build: .
-    image: runner-app:latest
-    container_name: runner-app
-    environment:
-      DATA_DIR: /app/data
-      LOG_DIR: /app/logs
-      API_KEY: api-key
-      MAX_GAMES_COUNT: 5
-      USE_FAST_API: "true"
-      FAST_API_PORT: 8082
-      USE_RABBITMQ: "true"
-      RABBITMQ_HOST: rabbitmq
-      RABBITMQ_PORT: 5672
-      TO_RUNNER_QUEUE: to-runner
-      TO_RUNNER_MANAGER_QUEUE: to-runner-manager-queue
-      RUNNER_MANAGER_IP: localhost
-      RUNNER_MANAGER_PORT: 5677
-      RUNNER_MANAGER_API_KEY: runner-manager-api-key
-      MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
-      SERVER_BUCKET_NAME: server
-      BASE_TEAM_BUCKET_NAME: baseteam
-      TEAM_CONFIG_BUCKET_NAME: teamconfig
-      GAME_LOG_BUCKET_NAME: gamelog
-    depends_on:
-      - rabbitmq
-      - minio
-    networks:
-      - dev_network
-    ports:
-      - "8082:8082"
-
   minio:
     image: minio/minio
     container_name: minio2
@@ -70,6 +36,44 @@ services:
       "
     networks:
       - dev_network
+
+  runner-app:
+#    build: .
+    image: runner-app:latest
+    container_name: runner-app
+    privileged: true
+    environment:
+      DATA_DIR: /app/data
+      LOG_DIR: /app/logs
+      API_KEY: api-key
+      MAX_GAMES_COUNT: 5
+      USE_FAST_API: "true"
+      FAST_API_PORT: 8082
+      USE_RABBITMQ: "true"
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_PORT: 5672
+      TO_RUNNER_QUEUE: to-runner
+      TO_RUNNER_MANAGER_QUEUE: to-runner-manager-queue
+      RUNNER_MANAGER_IP: localhost
+      RUNNER_MANAGER_PORT: 5677
+      RUNNER_MANAGER_API_KEY: runner-manager-api-key
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      SERVER_BUCKET_NAME: server
+      BASE_TEAM_BUCKET_NAME: baseteam
+      TEAM_CONFIG_BUCKET_NAME: teamconfig
+      GAME_LOG_BUCKET_NAME: gamelog
+    depends_on:
+      - rabbitmq
+      - minio
+    networks:
+      - dev_network
+    ports:
+      - "8082:8082"
+    volumes:
+      - D:\workspace\foxsy\foxsy-tournament-runner\runner\data:/app/data
+
 
 volumes:
   rabbitmq_data:
