--- a/runner/composes/minio/docker-compose.yml
+++ b/runner/composes/minio/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       dev_network:
         ipv4_address: 10.200.0.4
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: guest
+      MINIO_ROOT_PASSWORD: guest
     command: server /data --console-address ":9001"
     volumes:
       - D:\workspace\foxsy\minio\minio-data:/data
