--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       dev_network:
         ipv4_address: 10.100.0.4
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: guest
+      MINIO_ROOT_PASSWORD: guest
     command: server /data --console-address ":9001"
     volumes:
       - D:\workspace\foxsy\minio\minio-data:/data
@@ -57,9 +57,10 @@ services:
       RUNNER_MANAGER_IP: localhost
       RUNNER_MANAGER_PORT: 5677
       RUNNER_MANAGER_API_KEY: runner-manager-api-key
+      USE_MINIO: "true"
       MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
+      MINIO_ACCESS_KEY: guest
+      MINIO_SECRET_KEY: guest
       SERVER_BUCKET_NAME: server
       BASE_TEAM_BUCKET_NAME: baseteam
       TEAM_CONFIG_BUCKET_NAME: teamconfig
