--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -53,10 +53,10 @@ services:
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
       TO_RUNNER_QUEUE: to-runner
-      TO_RUNNER_MANAGER_QUEUE: to-runner-manager-queue
-      RUNNER_MANAGER_IP: localhost
-      RUNNER_MANAGER_PORT: 5677
-      RUNNER_MANAGER_API_KEY: runner-manager-api-key
+      CONNECT_TO_TOURNAMENT_MANAGER: "false"
+      TOURNAMENT_MANAGER_IP: localhost
+      TOURNAMENT_MANAGER_PORT: 5677
+      TOURNAMENT_MANAGER_API_KEY: tournament-manager-api-key
       USE_MINIO: "true"
       MINIO_ENDPOINT: minio:9000
       MINIO_ACCESS_KEY: guest
