--- a/runner/composes/minio/docker-compose.yml
+++ b/runner/composes/minio/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         ipv4_address: 10.200.0.4
     environment:
       MINIO_ROOT_USER: guest
-      MINIO_ROOT_PASSWORD: guest
+      MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
       - D:\workspace\foxsy\minio\minio-data:/data
