--- a/runner/composes/runner/docker-compose.yml
+++ b/runner/composes/runner/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       USE_MINIO: "true"
       MINIO_ENDPOINT: minio:9000
       MINIO_ACCESS_KEY: guest
-      MINIO_SECRET_KEY: guest
+      MINIO_SECRET_KEY: guest1234
       SERVER_BUCKET_NAME: server
       BASE_TEAM_BUCKET_NAME: baseteam
       TEAM_CONFIG_BUCKET_NAME: teamconfig
