add rabbit user name password

--- a/runner/composes/rabbit/docker-compose.yml
+++ b/runner/composes/rabbit/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "15672:15672"  # Management UI port
     environment:
       RABBITMQ_DEFAULT_USER: guest  # Default username
-      RABBITMQ_DEFAULT_PASS: guest  # Default password
+      RABBITMQ_DEFAULT_PASS: guest1234  # Default password
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     command: >
