--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         ipv4_address: 10.100.0.4
     environment:
       MINIO_ROOT_USER: guest
-      MINIO_ROOT_PASSWORD: guest
+      MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
       - D:\workspace\foxsy\minio\minio-data:/data
@@ -52,6 +52,8 @@ services:
       USE_RABBITMQ: "true"
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
+      RABBITMQ_USERNAME: guest
+      RABBITMQ_PASSWORD: guest1234
       TO_RUNNER_QUEUE: to-runner
       CONNECT_TO_TOURNAMENT_MANAGER: "false"
       TOURNAMENT_MANAGER_IP: localhost
