--- a/runner/composes/runner/docker-compose.yml
+++ b/runner/composes/runner/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       USE_RABBITMQ: "true"
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
+      RABBITMQ_USERNAME: guest
+      RABBITMQ_PASSWORD: guest1234
       TO_RUNNER_QUEUE: to-runner
       CONNECT_TO_TOURNAMENT_MANAGER: "false"
       TOURNAMENT_MANAGER_IP: localhost
