--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
-      - D:\workspace\foxsy\minio\minio-data:/data
+      - /home/aref/pp/oxsy/foxsy-tournament-manager/runner/composes/rabbit-minio-runner/data1:/data
 
   rabbitmq:
     image: rabbitmq:latest
@@ -26,7 +26,7 @@ services:
       - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      RABBITMQ_DEFAULT_PASS: guest1234
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     command: >
@@ -75,7 +75,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - D:\workspace\foxsy\foxsy-tournament-runner\runner\data:/app/data
+      - /home/aref/pp/oxsy/foxsy-tournament-manager/runner/composes/rabbit-minio-runner/data2:/app/data
 
 
 volumes:
