--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -75,7 +75,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - /home/aref/pp/oxsy/foxsy-tournament-manager/runner/composes/rabbit-minio-runner/data2:/app/data
+      - D:\workspace\foxsy\foxsy-tournament-runner\runner\data:/app/data
 
 
 volumes:
