Update Dir and volumes for permissions , add .env file for docker-compose

--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
-      - /home/aref/pp/oxsy/foxsy-tournament-manager/runner/composes/rabbit-minio-runner/data1:/data
+      -  ${MINIO_DATA_PATH}:/data
 
   rabbitmq:
     image: rabbitmq:latest
@@ -38,13 +38,13 @@ services:
       - dev_network
 
   runner-app:
-#    build: .
-    image: naderzare/foxsy-runner-app:latest
+    # build: .
+    image: foxsy-runner-app:latest
     container_name: foxsy-runner-app
     privileged: true
     environment:
-      DATA_DIR: /app/data
-      LOG_DIR: /app/data/logs
+      DATA_DIR: /home/appuser/app/data
+      LOG_DIR: /home/appuser/app/data/logs
       API_KEY: api-key
       MAX_GAMES_COUNT: 5
       USE_FAST_API: "true"
@@ -75,7 +75,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - D:\workspace\foxsy\foxsy-tournament-runner\runner\data:/app/data
+      - ${RUNNER_APP_DATA_PATH}:/home/appuser/app/data
 
 
 volumes:
