--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ runner/composes/rabbit-minio-runner/data2/gamelog/
 runner/composes/rabbit-minio-runner/data2/logs/
 runner/composes/rabbit-minio-runner/data2/server/rcssserver
 storage/data/tournament.db
+runner/composes/.env
