--- a/runner/composes/minio/docker-compose.yml
+++ b/runner/composes/minio/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
-      - D:\workspace\foxsy\minio\minio-data:/data
+      -  ${MINIO_DATA_PATH}:/data
 
 networks:
   dev_network:
