--- a/deploy/rabbit-minio-runner-tm/docker-compose.yml
+++ b/deploy/rabbit-minio-runner-tm/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
-      - /home/aref/pp/oxsy/foxsy-tournament-manager/runner/composes/rabbit-minio-runner/data1:/data
+      - ../data/minio:/data
 
   rabbitmq:
     image: rabbitmq:latest
@@ -28,7 +28,7 @@ services:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest1234
     volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
+      - ../data/rabbitmq:/var/lib/rabbitmq
     command: >
       sh -c "
       rabbitmq-plugins enable --offline rabbitmq_management &&
@@ -60,7 +60,7 @@ services:
     ports:
       - "8085:8085"
     volumes:
-      - D:\workspace\foxsy\foxsy-tournament-runner\tournament_manager2\data:/app/data
+      - ../data/tmanager:/app/data
 
   runner-app:
 #    build: .
@@ -101,11 +101,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - D:\workspace\foxsy\foxsy-tournament-runner\runner\data:/app/data
-
-
-volumes:
-  rabbitmq_data:
+      - ../data/runner:/app/data
 
 networks:
   dev_network:
