--- a/deploy/runner/docker-compose.yml
+++ b/deploy/runner/docker-compose.yml
@@ -35,11 +35,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - D:\workspace\foxsy\foxsy-tournament-runner\runner\data:/app/data
-
-
-volumes:
-  rabbitmq_data:
+      - ./data/runner:/app/data
 
 networks:
   dev_network:
