--- a/deploy/minio/docker-compose.yml
+++ b/deploy/minio/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
- 
   minio:
     image: minio/minio
     container_name: minio
@@ -11,8 +10,8 @@ services:
       dev_network:
         ipv4_address: 10.200.0.4
     environment:
-      MINIO_ROOT_USER: guest
-      MINIO_ROOT_PASSWORD: guest1234
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     command: server /data --console-address ":9001"
     volumes:
       - ../data/minio:/data
