--- a/deploy/rabbit-minio-runner/docker-compose.yml
+++ b/deploy/rabbit-minio-runner/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       dev_network:
         ipv4_address: 10.100.0.4
     environment:
-      MINIO_ROOT_USER: guest
-      MINIO_ROOT_PASSWORD: guest1234
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     command: server /data --console-address ":9001"
     volumes:
       - ../data/minio:/data
@@ -20,11 +20,11 @@ services:
     image: rabbitmq:latest
     container_name: rabbitmq
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "5672:5672"  
+      - "15672:15672" 
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest1234
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER} 
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
     volumes:
       - ../data/rabbitmq:/var/lib/rabbitmq
     command: >
@@ -33,47 +33,8 @@ services:
       rabbitmq-server
       "
     networks:
-      - dev_network
-
-  runner-app:
-#    build: .
-    image: naderzare/foxsy-runner-app:latest
-    container_name: foxsy-runner-app
-    privileged: true
-    environment:
-      DATA_DIR: /app/data
-      LOG_DIR: /app/data/logs
-      API_KEY: api-key
-      MAX_GAMES_COUNT: 5
-      USE_FAST_API: "true"
-      FAST_API_PORT: 8082
-      USE_RABBITMQ: "true"
-      RABBITMQ_HOST: rabbitmq
-      RABBITMQ_PORT: 5672
-      RABBITMQ_USERNAME: guest
-      RABBITMQ_PASSWORD: guest1234
-      TO_RUNNER_QUEUE: to-runner
-      CONNECT_TO_TOURNAMENT_MANAGER: "false"
-      TOURNAMENT_MANAGER_IP: localhost
-      TOURNAMENT_MANAGER_PORT: 8085
-      TOURNAMENT_MANAGER_API_KEY: api-key
-      USE_MINIO: "true"
-      MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: guest
-      MINIO_SECRET_KEY: guest1234
-      SERVER_BUCKET_NAME: server
-      BASE_TEAM_BUCKET_NAME: baseteam
-      TEAM_CONFIG_BUCKET_NAME: teamconfig
-      GAME_LOG_BUCKET_NAME: gamelog
-    depends_on:
-      - rabbitmq
-      - minio
-    networks:
-      - dev_network
-    ports:
-      - "8082:8082"
-    volumes:
-      - ../data/runner:/app/data
+      dev_network:
+        ipv4_address: 10.100.0.5
 
 networks:
   dev_network:
