--- a/deploy/rabbit/docker-compose.yml
+++ b/deploy/rabbit/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       - "5672:5672"  # Default RabbitMQ port
       - "15672:15672"  # Management UI port
     environment:
-      RABBITMQ_DEFAULT_USER: guest  # Default username
-      RABBITMQ_DEFAULT_PASS: guest1234  # Default password
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}  # Default username
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}  # Default password
     volumes:
       - ../data/rabbitmq:/var/lib/rabbitmq
     command: >
@@ -15,6 +15,3 @@ services:
       rabbitmq-plugins enable --offline rabbitmq_management &&
       rabbitmq-server
       "
-
-volumes:
-  rabbitmq_data:
