--- a/deploy/dev/.env
+++ b/deploy/dev/.env
@@ -43,3 +43,9 @@ MINIO_ROOT_PASSWORD=guest1234
 # RabbitMQ
 RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest1234
+
+# Local 
+MINIO_DATA_PATH=/mnt/g/ubuntu/fox/foxsy-tournament-manager/deploy/data/minio
+RABBITMQ_DATA_PATH=/mnt/g/ubuntu/fox/foxsy-tournament-manager/deploy/data/rabbitmq
+RUNNER_APP_DATA_PATH=/mnt/g/ubuntu/fox/foxsy-tournament-manager/deploy/data/runner
+TOURNAMENT_MANAGER_APP_DATA_PATH=/mnt/g/ubuntu/fox/foxsy-tournament-manager/deploy/data/tournament-manager
