--- a/runner/composes/rabbit-minio-runner-tm/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner-tm/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     ports:
       - "8085:8085"
     volumes:
-      - ${RUNNER_APP_DATA_PATH}:/home/appuser/app/data
+      - ${RUNNER_APP_DATA_PATH}:/app/data
 
   runner-app:
 #    build: .
@@ -68,8 +68,8 @@ services:
     container_name: foxsy-runner-app
     privileged: true
     environment:
-      DATA_DIR: /home/appuser/app/data
-      LOG_DIR: /home/appuser/app/data/logs
+      DATA_DIR: /app/data
+      LOG_DIR: /app/data/logs
       API_KEY: api-key
       MAX_GAMES_COUNT: 5
       USE_FAST_API: "true"
@@ -101,7 +101,7 @@ services:
     ports:
       - "8082:8082"
     volumes:
-      - ${RUNNER_APP_DATA_PATH}:/home/appuser/app/data
+      - ${RUNNER_APP_DATA_PATH}:/app/data
 
 
 volumes:
