--- a/runner/composes/rabbit-minio-runner/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner/docker-compose.yml
@@ -39,7 +39,7 @@ services:
 
   runner-app:
     # build: .
-    image: foxsy-runner-app:latest
+    image: naderzare/foxsy-runner-app:latest
     container_name: foxsy-runner-app
     privileged: true
     environment:
