--- a/runner/composes/rabbit-minio-runner-tm/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner-tm/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MINIO_ROOT_PASSWORD: guest1234
     command: server /data --console-address ":9001"
     volumes:
-      - /home/aref/pp/oxsy/foxsy-tournament-manager/runner/composes/rabbit-minio-runner/data1:/data
+      - D:\workspace\foxsy\minio\minio-data:/data
 
   rabbitmq:
     image: rabbitmq:latest
@@ -52,6 +52,13 @@ services:
       RABBITMQ_USERNAME: guest
       RABBITMQ_PASSWORD: guest1234
       TO_RUNNER_QUEUE: to-runner
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ACCESS_KEY: guest
+      MINIO_SECRET_KEY: guest1234
+      SERVER_BUCKET_NAME: server
+      BASE_TEAM_BUCKET_NAME: baseteam
+      TEAM_CONFIG_BUCKET_NAME: teamconfig
+      GAME_LOG_BUCKET_NAME: gamelog
     networks:
       - dev_network
     depends_on:
