--- a/tournament_manager2/Dockerfile
+++ b/tournament_manager2/Dockerfile
@@ -3,6 +3,12 @@ FROM python:3.9-slim
 
 RUN apt update && apt-get install -y fuse && rm -rf /var/lib/apt/lists/*
 
+# Install Rust and Cargo
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+
+# Ensure Rust and Cargo are available in the environment for subsequent commands
+ENV PATH="/root/.cargo/bin:${PATH}"
+
 # Create a non-root user
 RUN useradd -ms /bin/bash appuser
 
@@ -12,7 +18,7 @@ COPY . /app
 RUN chown -R appuser:appuser /app
 
 # Install dependencies
-RUN pip install --no-cache-dir -r /app/requirements.txt
+RUN pip install --upgrade pip && pip install --no-cache-dir -r /app/requirements.txt
 
 # Copy the entrypoint script and make it executable
 COPY entrypoint.sh /app/entrypoint.sh
