--- a/tournament_manager2/requirements.txt
+++ b/tournament_manager2/requirements.txt
@@ -5,3 +5,7 @@ aio-pika==9.4.1
 fastapi==0.111.0
 unicorn==2.0.1
 minio==7.2.7
+aiosqlite==0.20.0
+aiobotocore==2.15.0
+pytest==8.3.3
+pytest-asyncio==0.24.0
