update game runner based on tm

--- a/runner/composes/rabbit-minio-runner-tm/docker-compose.yml
+++ b/runner/composes/rabbit-minio-runner-tm/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       API_KEY: api-key
       MAX_GAMES_COUNT: 5
       USE_FAST_API: "true"
+      FAST_API_IP: "127.0.0.1"
       FAST_API_PORT: 8082
       USE_RABBITMQ: "true"
       RABBITMQ_HOST: rabbitmq
