fix docker problems

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ runner/composes/rabbit-minio-runner/data2/logs/
 runner/composes/rabbit-minio-runner/data2/server/rcssserver
 storage/data/tournament.db
 .venv/
+deploy/data/
+deploy/.env
