--- a/runner/pyproject.toml
+++ b/runner/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.115.0",
     "minio>=7.2.9",
     "pika>=1.3.2",
+    "pip>=24.2",
     "psutil>=6.0.0",
     "requests>=2.32.3",
     "unicorn>=2.1.0",
