--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -1,48 +1,31 @@
 aio-pika==9.4.3
-aiobotocore==2.15.1
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aioitertools==0.12.0
 aiormq==6.8.1
-aiosignal==1.3.1
-aiosqlite==0.20.0
 annotated-types==0.7.0
 anyio==4.6.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-attrs==24.2.0
-botocore==1.35.23
 certifi==2024.8.30
 cffi==1.17.1
+charset-normalizer==3.3.2
 click==8.1.7
 colorlog==6.8.2
 fastapi==0.115.0
-frozenlist==1.4.1
-greenlet==3.1.1
 h11==0.14.0
 idna==3.10
-iniconfig==2.0.0
-jmespath==1.0.1
-minio==7.2.8
+minio==7.2.9
 multidict==6.1.0
-packaging==24.1
 pamqp==3.3.0
 pika==1.3.2
-pluggy==1.5.0
+psutil==6.0.0
 pycparser==2.22
 pycryptodome==3.20.0
 pydantic==2.9.2
 pydantic_core==2.23.4
-pytest==8.3.3
-pytest-asyncio==0.24.0
-python-dateutil==2.9.0.post0
-six==1.16.0
+requests==2.32.3
 sniffio==1.3.1
-SQLAlchemy==2.0.35
 starlette==0.38.6
 typing_extensions==4.12.2
 unicorn==2.1.0
 urllib3==2.2.3
 uvicorn==0.30.6
-wrapt==1.16.0
-yarl==1.12.0
+yarl==1.12.1
