--- a/runner/pyproject.toml
+++ b/runner/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "minio>=7.2.9",
     "pika>=1.3.2",
     "psutil>=6.0.0",
+    "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "unicorn>=2.1.0",
     "uvicorn>=0.30.6",
