--- a/runner/default.yml
+++ b/runner/default.yml
@@ -7,20 +7,20 @@ config:
   use_fast_api: True
   fast_api_ip: "127.0.0.1"
   fast_api_port: 8082
-  use_rabbitmq: False
+  use_rabbitmq: True
   rabbitmq_host: "localhost"
   rabbitmq_port: 5672
-  rabbitmq_username: "admin"
-  rabbitmq_password: "adminadmin132"
+  rabbitmq_username: "guest"
+  rabbitmq_password: "guest1234"
   to_runner_queue: "to_runner"
-  connect_to_tournament_manager: False
+  connect_to_tournament_manager: True
   tournament_manager_ip: "localhost"
   tournament_manager_port: 8085
   tournament_manager_api_key: "api-key"
-  use_minio: False
+  use_minio: True
   minio_endpoint: "localhost:9000"
-  minio_access_key: "admin"
-  minio_secret_key: "password"
+  minio_access_key: "guest"
+  minio_secret_key: "guest1234"
   server_bucket_name: "server"
   base_team_bucket_name: "baseteam"
   team_config_bucket_name: "teamconfig"
